--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <h1>Hello jordan</h1> --- HTML Element ( Are the Open tag, Content, Close Tag)
+        <h1>Hello Choox</h1> --- HTML Element ( Are the Open tag, Content, Close Tag)
         <h2>Chapter heading</h2>
         <h3 id="normal">just guessing</h3>
         <div> It just provides a section of the website content. div has no meaning</div>
